--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <script src="https://kit.fontawesome.com/395a561a45.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,500;1,400&family=Inconsolata:wght@800&family=Montserrat:wght@200&family=Source+Sans+Pro:ital,wght@0,200;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +48,7 @@
                     <li><a href="#">Acesse sua conta</a></li>
                     <li><a href="#">Quem Somos</a>
                         <ul>
-                            <li><a href="#">Historia</a></li>
+                            <li><a href="#historia">Historia</a></li>
                             <li><a href="#">Tecno</a></li>
                         </ul>
 
@@ -124,16 +130,35 @@
         </div>
 
         <div class="cartoes_parceiros">
-            <img src="cartoes_2.jpg">
+            <img src="cartoes_3.jpg">
         </div>
     </section>
 
 
-    <section class="parte__quinta">
+    <section id="historia" class="parte__quinta">
 
         <!--historia-->
-
-
+        <div class="historia">
+            <div class="texto_historia">
+                <H2>Nossa Historia</H2>
+                <p>Embora Novos e com pensamentos talvez sem maturidade, o processo inicial da veio atráves de uma aula
+                    no
+                    curso tecnico de desenvolvimento de sistemas, onde hoje os CEO: Dora,Moura, Assuero e wellen não
+                    tinhamos ciência daquilo que estavamos criando, encorajados apenas pela força de vontade de tirar
+                    boas
+                    notas criamos uma revolução tecnologica que veio se predominar ao entrarmos em contato com grandes
+                    influencer da cidade, toda parte de front-end sendo com conduzida por Assuero, back-end o Senhor
+                    Moura,
+                    a Parte do Java programação orientada a objetos com nossa Dora e não menos a parte do App que ficou
+                    com
+                    nossa amada wellen.
+                </p>
+            </div>
+            <div class="imagem_historia">
+                <img src="livro.jpg">
+            </div>
+            <br> <br> <br>
+        </div>
     </section>
 
 
@@ -144,7 +169,7 @@
 
         <div class="parte__fim">
 
-            <p i class="fa-solid fa-wifi"></i>	&nbsp;CreDouble</p>
+            <p i class="fa-solid fa-wifi"></i> &nbsp;CreDouble</p>
             <div class="marquinha"></div>
             <p>Porque ser um, se voce pode ser Double</p>
 
@@ -159,11 +184,21 @@
                 <i class="fa-brands fa-twitter"></i>
             </div>
         </div>
+        <div class="playtores">
+
+
+
+
+        </div>
+
+
+
+
     </section>
 
 
 
-
+    <script src="https://kit.fontawesome.com/395a561a45.js" crossorigin="anonymous"></script>
     <script src="js.js"></script>
 </body>
 
