--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
     <title>CreDouble</title>
 </head>
 
@@ -49,7 +51,7 @@
                     <li><a href="#">Quem Somos</a>
                         <ul>
                             <li><a href="#historia">Historia</a></li>
-                            <li><a href="#">Tecno</a></li>
+                            <li><a href="#tecno">Tecno</a></li>
                         </ul>
 
                     </li>
@@ -136,11 +138,10 @@
 
 
     <section id="historia" class="parte__quinta">
-
+        <h2>Nossa Historia</h2>
         <!--historia-->
         <div class="historia">
             <div class="texto_historia">
-                <H2>Nossa Historia</H2>
                 <p>Embora Novos e com pensamentos talvez sem maturidade, o processo inicial da veio atráves de uma aula
                     no
                     curso tecnico de desenvolvimento de sistemas, onde hoje os CEO: Dora,Moura, Assuero e wellen não
@@ -155,10 +156,31 @@
                 </p>
             </div>
             <div class="imagem_historia">
-                <img src="livro.jpg">
+                <img src="ideia.jpg">
             </div>
             <br> <br> <br>
         </div>
+    </section>
+
+
+
+    <section id="tecno" class="parte__sexta">
+
+        <div class="tecno_nova">
+            <div class="nossa_tecno">
+                <p>
+                    <a href="#">Nossa tecnologia</a> é pioneira e utiliza o que a de mais novo em linguagens de
+                    programação, atráves de
+                    muitos estudos conseguimos fazer que um cartão de credito seja acionado atráves da aproximação de
+                    uma maquina 'VEM' fazendo com que seja debitado o valor correspondente a passagem do transporte,
+                    atráves
+                    da criação de um software conseguimos fazer que o cartão detecte a presença do leitor 'VEM' esse
+                    sinal de solicitação vai ao nosso banco de dados depois de aprovado o credito eo tipo, imediatamente
+                    o pagamento vai as contas do grande recife que libera o movimento da catraca.
+                </p>
+            </div>
+
+
     </section>
 
 
@@ -167,7 +189,7 @@
 
         <div class="parte__fim">
 
-            <p i class="fa-solid fa-wifi"></i> &nbsp;CreDouble</p>
+            <p i class="fa-solid fa-wifi double"></i> &nbsp;CreDouble</p>
             <div class="marquinha"></div>
             <p>Porque ser um, se voce pode ser Double</p>
 
@@ -184,17 +206,16 @@
         </div>
         <div class="playtores">
 
-
+            <img src="playstore.png">
+            <img src="appsotre.png">
 
 
         </div>
 
 
-
-
     </section>
 
-
+  
 
     <script src="https://kit.fontawesome.com/395a561a45.js" crossorigin="anonymous"></script>
     <script src="js.js"></script>
