--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/395a561a45.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,6 +39,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
     <title>CreDouble</title>
 </head>
 
@@ -55,16 +61,11 @@
                         </ul>
 
                     </li>
-
-
-                    <li><a href="#">Download</a></li>
-
-
-
+                    <li><a href="#">Cadastrar Cartões</a>
                     <li><a href="#">Faça sua conta</a>
                         <ul>
-                            <li><a href="#">Cliente</a></li>
-                            <li><a href="#">Empresa</a></li>
+                            <li><a href="formulario.html">Cliente</a></li>
+                            <li><a href="trabalho.html">Trabalho</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -215,7 +216,7 @@
 
     </section>
 
-  
+
 
     <script src="https://kit.fontawesome.com/395a561a45.js" crossorigin="anonymous"></script>
     <script src="js.js"></script>
